--- a/public/css/_topic.scss
+++ b/public/css/_topic.scss
@@ -219,7 +219,7 @@
 }
 
 .new-shop {
-    &_tab {
+    &_tabb {
         background-color: #388790;
         padding: 10px 20px;
         display: flex;
@@ -440,11 +440,22 @@
         &_icon {
             width: 20px;
             height: 20px;
-            margin: 0 auto 5px;
+            // margin: 0 auto 5px;
+            margin-bottom: 5px;
             &.num {
                 &-1 {
                     path {
                         fill: #E2BA18;
+                    }
+                }
+                &-2 {
+                    path {
+                        fill: #B6C2CF;
+                    }
+                }
+                &-3 {
+                    path {
+                        fill: #9F6F37;
                     }
                 }
             }
@@ -465,5 +476,35 @@
         padding-left: 15px;
     }
     &_shop {
+        font-size: 14px;
+        color: #FD660C;
+        margin-bottom: 5px;
+    }
+    &_name {
+        font-size: 14px;
+        color: #555555;
+        margin-bottom: 5px;
+    }
+    &_origin {
+        font-size: 12px;
+        color: #999999;
+        text-decoration: line-through;
+        margin-bottom: 5px;
+    }
+    &_newprice {
+        color: #555555;
+        font-size: 12px;
+        font-weight: 700;
+        margin-right: 10px;
+        margin: 0 10px 0 0;
+        span {
+            color: $primary;
+        }
+    }
+    &_tag {
+        font-size: 12px;
+        color: $primary;
+        padding: 2px 5px;
+        border: 1px solid $primary;
     }
 }
