--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -18,12 +18,33 @@ body {
     &-12 { font-size: 12px; }
     &-14 { font-size: 14px; }
     &-16 { font-size: 16px; }
+    &-18 { font-size: 18px; }
     &-20 { font-size: 20px; }
+    &-22 { font-size: 22px; }
+    &-24 { font-size: 24px; }
+    &-50 { font-size: 50px; }
 }
 
 .color {
     &-primary { color: $primary !important; }
     &-99 { color: #999999; }
+    &-66 { color: #666; }
+    &-55 { color: #555; }
+    &-33 { color: #333; }
+    &-lightblue { color: #31ABF2; }
+    &-blue { color: #0054AC; }
+    &-orange { color: #F36F21; }
+    &-brown { color: #7D6E00; }
+    &-green { color: #097203; }
+}
+
+.border-e9 { border: 1px solid #e9e9e9; }
+.border-e6 { border-color: #e6e6e6 !important; }
+.border-cc { border-color: #CCCCCC !important; }
+
+.py-2_5 {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 input, button {
@@ -38,6 +59,7 @@ main {
     max-width: 450px;
     background-color: #F5F5F5;
     // height: 1000px;
+    overflow: hidden;
 }
 
 ul {
@@ -308,7 +330,9 @@ a {
 .fix-ad {
     position: fixed;
     width: 100%;
-    left: 0;
+    max-width: 450px;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 0;
     z-index: 5;
     &_inner {
@@ -607,6 +631,54 @@ a {
     }
 }
 
+.gift {
+    background-color: #fff;
+    &_item {
+        display: block;
+        margin-bottom: 15px;
+        >img {
+            width: 100%;
+        }
+    }
+}
+
+.cheat {
+    &_inner {
+        border-radius: 12px;
+        background-color: #fff;
+            padding: 15px;
+            border-radius: 12px;
+            border: 1px solid #CCCCCC;
+        &_content {
+            margin-bottom: 20px;
+        } 
+    }
+    &_title {
+        display: flex;
+        align-items: center;
+        margin-bottom: 5px;
+        i {
+            font-size: 16px;
+            margin-right: 5px;
+            color: $primary;
+        }
+        h3 {
+            font-size: 16px;
+            color: $primary;
+            font-weight: 700;
+            margin: 0;
+        }
+    }
+    &_inner {
+        p {
+            font-size: 14px;
+            padding-left: 22px;
+            margin: 0;
+        }
+        
+    }
+}
+
 .title-box {
     padding: 15px 20px;
     border-bottom: 1px solid #E9E9E9;
@@ -755,5 +827,201 @@ a {
     }
     i {
         color: #CCCCCC;
+    }
+}
+
+.product-2nd {
+    &_search {
+        position: fixed;
+        bottom: 30px;
+        left: 50%;
+        width: calc(100% - 30px);
+        max-width: calc(450px - 30px);
+        transform: translateX(-50%);
+        z-index: 10;
+        background-color: rgba(255,255,255,0.8);
+        border-radius: 100px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.25);
+        padding: 5px;
+        .row {
+            margin: 0;
+            >div {
+                padding: 0;
+            }
+        }
+        a {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            border-radius: 100px;
+            color: #333333;
+            font-weight: 500;
+            padding: 10px;
+            &.active {
+                background-color: #000;
+                color: #fff;
+            }
+        }
+    }
+    &_pay {
+        background-color: #fff;
+        &_item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            p {
+                font-size: 14px;
+                margin: 0;
+                font-weight: 700;
+                color: #616161;
+                width: 70px;
+                position: relative;
+                &::after {
+                    position: absolute;
+                    content: "";
+                    width: 2px;
+                    height: 10px;
+                    background-color: #979797;
+                    top: 50%;
+                    right: 0;
+                    transform: translateY(-50%);
+                }
+            }
+            img {
+                height: 20px;
+                margin-right: 10px;
+            }
+        }
+    }
+    &_footer {
+        background-color: transparent;
+    }
+    &_link {
+        background-color: #fff;
+        &_head {
+            padding: 10px;
+            h4 {
+                font-size: 16px;
+                font-weight: 700;
+                margin: 0;
+            }
+            &.active {
+                .product-2nd_link_icon {
+                    i {
+                        &.plus {
+                            display: none;
+                        }
+                        &.minus {
+                            display: block;
+                        }
+                    }
+                }
+            }
+        }
+        &_icon {
+            i {
+                font-size: 18px;
+                &.minus {
+                    display: none;
+                }
+            }
+        }
+        &_item {
+            border-bottom: 1px solid #CCCCCC;
+            ul {
+                padding: 10px 0 10px 40px;
+                display: none;
+                li {
+                    margin-bottom: 10px;
+                }
+                a {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+}
+
+.menu {
+    position: fixed;
+    width: 100%;
+    max-width: 450px;
+    top: 0;
+    left: -100%;
+    // left: 50%;
+    // transform: translateX(-50%);
+    height: 100%;
+    background-color: #fff;
+    z-index: 100;
+    // transform: translateX(-150%);
+    transition: $transition;
+    &_head {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        border-bottom: 1px solid $primary;
+        p {
+            margin: 0;
+            font-size: 14px;
+            font-weight: 700;
+            color: #555;
+        }
+        i {
+            font-size: 20px;
+        }
+    }
+    &_nav {
+        height: calc(100vh - 51px);
+        overflow-y: auto;
+        position: relative;
+        &_item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 15px;
+            border-bottom: 1px solid #e6e6e6;
+            span {
+                font-size: 14px;
+            }
+            i {
+                font-size: 18px;
+                color: #999;
+            }
+        }
+        &_child {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            overflow-y: auto;
+            background-color: #fff;
+            top: 0;
+            left: 0;
+            left: -100%;
+            transition: $transition;
+            &.active {
+                left: 0;
+            }
+            &_back {
+                padding: 10px 15px;
+                border-bottom: 1px solid #8A8A8A;
+                span {
+                    font-size: 14px;
+                    font-weight: 700;
+                }
+                i {
+                    font-size: 16px;
+                    margin-right: 10px;
+                    color: #999;
+                }
+            }
+        }
+    }
+    &.active {
+        // transform: translateX(-50%);
+        left: 0;
     }
 }
