--- a/public/css/_common.scss
+++ b/public/css/_common.scss
@@ -36,6 +36,16 @@ body {
     &-orange { color: #F36F21; }
     &-brown { color: #7D6E00; }
     &-green { color: #097203; }
+    &-white { color: #fff; }
+    &-lightred { color: #FF2D3B; }
+    &-yellow { color: #FFD002; }
+}
+
+.bg {
+    &-f4 { background-color: #f4f4f4; }
+    &-yellow { background-color: #FFC990; }
+    &-ea { background-color: #EAEAEA; }
+    &-primary { background-color: $primary !important; }
 }
 
 .border-e9 { border: 1px solid #e9e9e9; }
@@ -47,10 +57,18 @@ body {
     padding-bottom: 10px;
 }
 
-input, button {
+input, button, select {
     border: 0;
     outline: none;
     background-color: transparent;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 main {
@@ -1024,4 +1042,53 @@ a {
         // transform: translateX(-50%);
         left: 0;
     }
+}
+
+.nav-login {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 450px;
+    padding: 13px 20px;
+    border-radius: 10px 10px 0 0;
+    background-color: $primary;
+    color: #fff;
+    a {
+        i, span {
+            display: block;
+            text-align: center;
+            line-height: 1;
+            color: #fff;
+        }
+        i {
+            font-size: 20px;
+            margin-bottom: 8px;
+        }
+        span {
+            font-size: 14px;
+        }
+    }
+}
+
+.modal-dialog {
+    margin-top: 100px;
+    max-width: 400px;
+    .modal-title {
+        font-size: 16px;
+    }
+    .modal-header {
+        border: 0;
+    }
+    .modal-footer {
+        border: 0;
+    }
+    .modal-body {
+        padding: 0 40px;
+    }
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
