--- a/public/css/_search.scss
+++ b/public/css/_search.scss
@@ -32,6 +32,7 @@
             border: 1px solid #CCCCCC;
             color: #555555;
             margin: 0 10px 10px 0;
+            cursor: pointer;
         }
     }
 }
