--- a/public/css/_shop.scss
+++ b/public/css/_shop.scss
@@ -222,6 +222,11 @@
             padding: 5px 10px;
             width: 100%;
             outline: none;
+            font-size: 14px;
+            height: 43px;
+            &::placeholder {
+                color: #999;
+            }
         }
         textarea {
             height: 100px;
